<?xml version="1.0" encoding="UTF-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/keypad"
    android:showDividers="middle"
    android:divider="@layout/vertical_divider"
    android:background="#ffdddddd"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    android:shrinkColumns="*" >
    <TableRow 
         android:showDividers="middle"
    	 android:divider="@layout/horizontal_divider">
         <Button
            android:id="@+id/keypad_div"
            android:text="@string/keypad_div"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_mul"
            android:text="@string/keypad_mul"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_sub"
            android:text="@string/keypad_sub"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_add"
            android:text="@string/keypad_add"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_pow"
            android:text="@string/keypad_pow"
            style="?android:attr/buttonBarButtonStyle"/>
    </TableRow>
    <TableRow
        android:showDividers="middle"
    	android:divider="@layout/horizontal_divider">
        <Button
            android:id="@+id/keypad_1"
            android:text="@string/keypad_1"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_2"
            android:text="@string/keypad_2"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_3"
            android:text="@string/keypad_3"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_X"
            android:text="@string/keypad_X"
            style="?android:attr/buttonBarButtonStyle"/>
       	<Button
            android:id="@+id/keypad_substitution"
            android:text="@string/keypad_substitution"
            style="?android:attr/buttonBarButtonStyle"/>
    </TableRow>
    <TableRow
        android:showDividers="middle"
    	android:divider="@layout/horizontal_divider">
        <Button
            android:id="@+id/keypad_4"
            android:text="@string/keypad_4"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_5"
            android:text="@string/keypad_5"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_6"
            android:text="@string/keypad_6"
            style="?android:attr/buttonBarButtonStyle"/>
         <Button
            android:id="@+id/keypad_E"
            android:text="@string/keypad_E"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_sp"
            android:text="@string/keypad_sp"
            style="?android:attr/buttonBarButtonStyle"/>
    </TableRow>
    <TableRow
        android:showDividers="middle"
    	android:divider="@layout/horizontal_divider">
        <Button
            android:id="@+id/keypad_7"
            android:text="@string/keypad_7"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_8"
            android:text="@string/keypad_8"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_9"
            android:text="@string/keypad_9"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_0"
            android:text="@string/keypad_0"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/keypad_dot"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/keypad_dot" />

    </TableRow>
    <TableRow
        android:showDividers="middle"
    	android:divider="@layout/horizontal_divider">
        <Button
             android:id="@+id/keypad_C"
            android:text="@string/keypad_C"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_bs"
            android:text="@string/keypad_bs"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_up"
            android:text="@string/keypad_up"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_down"
            android:text="@string/keypad_down"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/keypad_next"
            android:text="@string/keypad_next"
            style="?android:attr/buttonBarButtonStyle"/>
    </TableRow>
</TableLayout>