<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jp.tannakaken.infinitenioncalculator.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item 
        android:id="@+id/action_show_variables"
        android:orderInCategory="100"
        android:title="@string/action_show_variables"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_problem"
        android:orderInCategory="100"
        android:title="@string/action_problem"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_story"
        android:orderInCategory="100"
        android:title="@string/action_story"
        app:showAsAction="never"/>
    <item android:id="@+id/action_finish"
        android:orderInCategory="100"
        android:title="@string/action_finish"
        app:showAsAction="never"/>
</menu>
